# bullet

./: .npmrc  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  readme.md  svelte.config.js  vite.config.ts
.github/workflows/: build.yml
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: types.ts
src/lib/adapters/: Adapter.ts  LocalAdapter.ts
src/lib/attachments/: drag.ts
src/lib/components/: Editor.svelte  Panel.svelte  Resizer.svelte  Sidebar.svelte  StatusBar.svelte  Titlebar.svelte  View.svelte  WindowsControls.svelte
src/lib/components/blocks/: Counter.svelte  Paragraph.svelte
src/lib/components/editor/: Editor.svelte  SvelteNodeView.svelte.ts
src/lib/core/adapters/: Adapter.ts  LocalAdapter.ts
src/lib/core/blocks/: Heading.svelte  Paragraph.svelte
src/lib/core/database/: index.ts  migrate.ts  schema.ts
src/lib/core/database/migrations/: 0000_blushing_garia.sql  0001_test.sql  (+2 more)
src/lib/core/pages/: DocumentPage.ts  Page.ts
src/lib/core/workspace/: Workspace.svelte.ts  WorkspaceManager.svelte.ts
src/lib/database/: index.ts  migrate.ts  schema.ts
src/lib/plugins/: Plugin.ts  corePlugin.ts
src/lib/workspace/: Workspace.ts  WorkspaceManager.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/workspace/: +error.svelte  +page.svelte  +page.ts
src/routes/workspace/[id]/: +page.svelte  WorkspaceView.svelte
src/styles/: global.scss  themes.scss
(+4 files in other folders)
